tests/ui/feature-gates/feature-gate-unsized-const-params.stderr
error[E0741]: `Bar` must implement `ConstParamTy` to be used as the type of a const generic parameter
  --> $DIR/feature-gate-unsized-const-params.rs:5:21
   |
LL | struct Foo<const N: Bar>;
   |                     ^^^
   |
help: add `#[derive(ConstParamTy, PartialEq, Eq)]` to the struct
   |
LL - struct Bar(u8);
LL + #[derive(ConstParamTy, PartialEq, Eq)]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0741`.
